unpackaged/main/default/objects/Opportunity/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>Why, specifically, did we lose this deal?</description>
    <inlineHelpText>Why did we lose this deal?

If missing features, add which features.

If loss reason is other - include what new loss reason this would be.</inlineHelpText>
    <label>Loss Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>