unpackaged/main/default/objects/Opportunity/fields/Deal_Upside__c.field-meta.xml
<CustomField>
    <fullName>Deal_Upside__c</fullName>
    <description>Use this to input a deal upside to be able to show leadership what the expected the upside of a deal that is currently being worked is.</description>
    <inlineHelpText>Use this to input a deal upside to be able to show leadership what the expected the upside of a deal that is currently being worked is.</inlineHelpText>
    <label>Deal Upside</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>