unpackaged/main/default/objects/Opportunity/fields/DealOpsNotes__c.field-meta.xml
<CustomField>
    <fullName>DealOpsNotes__c</fullName>
    <label>DealOps Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>