unpackaged/main/default/objects/Opportunity/fields/Decision_Criteria_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Score__c</fullName>
    <description>This step is all about the technical requirements needed to win the deal.</description>
    <inlineHelpText>--A score of 0 means we don’t know their criteria that they are measuring us against.  
--A score of 1 means they have shared requirements with us, but haven’t met them all. 
--A score of 2 means they have mapped out the requirements, and confirmed with us that we can meet them all.</inlineHelpText>
    <label>Decision Criteria Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>