unpackaged/main/default/objects/Opportunity/fields/Decision_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_Score__c</fullName>
    <description>This step requires an understanding of all the stakeholders involved in buying Grafana.</description>
    <inlineHelpText>A score of 0 means we don't yet know all of the stakeholders in the decision process.  A score of 1 means we know some of the stakeholders.  A score of 2 means we know all the stakeholders in the decision process and we've met with them.</inlineHelpText>
    <label>Decision Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>