unpackaged/main/default/objects/Opportunity/fields/Did_Not_Trial__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Not Trial</label>
    <type>Checkbox</type>
</CustomField>