unpackaged/main/default/objects/Opportunity/fields/DP__c.field-meta.xml
<CustomField>
    <fullName>DP__c</fullName>
    <description>Intersection of buying &amp; selling cycles and the validation that it will satisfy the prioritized criteria.</description>
    <inlineHelpText>What are the processes in evaluating and validating a solution; e.g. security review, PoC, etc. and who is involved?</inlineHelpText>
    <label>DP</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>