unpackaged/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <inlineHelpText>Who is the EB? Have you met the EB &amp; established a relationship?</inlineHelpText>
    <label>Economic Buyer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>