unpackaged/main/default/objects/Opportunity/fields/Economic_Buyer_Score__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_Score__c</fullName>
    <description>The economic buyer is the person that owns a budget and, if they choose, can move money around to make a purchase.</description>
    <inlineHelpText>--A score of 0 means we don’t know the economic buyer. 
--A score of 1 means they know who the economic buyer is, but we don't have a relationship with them. 
--A score of 2 means they have built a relationship with the economic buyer, can get return fire on a text/email.</inlineHelpText>
    <label>Economic Buyer Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>