unpackaged/main/default/objects/Opportunity/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <description>Field for SEs to track what type of Evaluation was used on the opportunity</description>
    <inlineHelpText>Field for SEs to track what type of Evaluation was used on the opportunity. If multiple evaluations are used, select the heaviest engagement.</inlineHelpText>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Customer-led Trial</fullName>
            </value>
            <value>
                <fullName>POV</fullName>
            </value>
            <value>
                <fullName>Grafana-led Trial</fullName>
                <isActive>false</isActive>
                <label>Grafana-led Trial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>