unpackaged/main/default/objects/Opportunity/fields/fid12__c.field-meta.xml
<CustomField>
    <fullName>fid12__c</fullName>
    <label>Trial Expired</label>
    <type>Date</type>
</CustomField>