unpackaged/main/default/objects/Opportunity/fields/fid13__c.field-meta.xml
<CustomField>
    <fullName>fid13__c</fullName>
    <label>Trial Started</label>
    <type>Date</type>
</CustomField>