unpackaged/main/default/objects/Opportunity/fields/fid15__c.field-meta.xml
<CustomField>
    <fullName>fid15__c</fullName>
    <label>Trial Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium Active</fullName>
            </value>
            <value>
                <fullName>Premium Expired</fullName>
            </value>
            <value>
                <fullName>Grafana Cloud Active</fullName>
            </value>
            <value>
                <fullName>Grafana Cloud Expired</fullName>
            </value>
            <value>
                <fullName>worldPing Active</fullName>
            </value>
            <value>
                <fullName>worldPing Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>