unpackaged/main/default/objects/Opportunity/fields/fidled__c.field-meta.xml
<CustomField>
    <fullName>fidled__c</fullName>
    <label>Last Event Date (sort)</label>
    <type>DateTime</type>
</CustomField>