unpackaged/main/default/objects/Opportunity/fields/Finders_Fee__c.field-meta.xml
<CustomField>
    <fullName>Finders_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finders Fee</label>
    <type>Checkbox</type>
</CustomField>