unpackaged/main/default/objects/Opportunity/fields/Finders_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Finders_Fee_Details__c</fullName>
    <label>Finders Fee Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Assisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>