unpackaged/main/default/objects/Opportunity/fields/Flexfield_Ops__c.field-meta.xml
<CustomField>
    <fullName>Flexfield_Ops__c</fullName>
    <description>Field to tag opportunities for Ops purposes</description>
    <inlineHelpText>Field to tag opportunities for Ops purposes</inlineHelpText>
    <label>Flexfield (Ops)</label>
    <type>TextArea</type>
</CustomField>