unpackaged/main/default/objects/Opportunity/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <description>This custom field is built to enhance the Forecast Category options available to Grafana by including additional values not available OOTB. This field is automatically updated via the Opportunity Flow when an Opportunity changes Stage, and is manually editable thereafter.</description>
    <inlineHelpText>This custom field is built to enhance the Forecast Category options available to Grafana by including additional values not available OOTB. This field is automatically updated via the Opportunity Flow when an Opportunity changes Stage, and is editable.</inlineHelpText>
    <label>True Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>6 - Pipeline</label>
            </value>
            <value>
                <fullName>Upside</fullName>
                <label>5 - Upside</label>
            </value>
            <value>
                <fullName>Best Case</fullName>
                <label>4 - Best Case</label>
            </value>
            <value>
                <fullName>Green Zone</fullName>
                <label>3 - Green Zone</label>
            </value>
            <value>
                <fullName>Commit</fullName>
                <label>2 - Commit</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>1 - Closed</label>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>