unpackaged/main/default/objects/Opportunity/fields/Forecast_Category_Number__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_Number__c</fullName>
    <description>A numerical value that shows the forecast categories from the "true" forecast category field</description>
    <inlineHelpText>A numerical value that shows the forecast categories from the "true" forecast category field</inlineHelpText>
    <label>Forecast Category Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>