unpackaged/main/default/objects/Opportunity/fields/Gcom_Org_Slug__c.field-meta.xml
<CustomField>
    <fullName>Gcom_Org_Slug__c</fullName>
    <description>This field populates with the account level org slug, if present, if it is blank there is no org slug on this account.</description>
    <inlineHelpText>This field populates with the account level org slug, if present, if it is blank there is no org slug on this account.</inlineHelpText>
    <label>Gcom Org Slug</label>
    <type>TextArea</type>
</CustomField>