unpackaged/main/default/objects/Opportunity/fields/Go_No_Go_Details__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Details__c</fullName>
    <label>Go/No-Go Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>