unpackaged/main/default/objects/Opportunity/fields/Go_No_Go_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go/No-Go Meeting</label>
    <type>Checkbox</type>
</CustomField>