unpackaged/main/default/objects/Opportunity/fields/Go_No_Go_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Meeting_Date__c</fullName>
    <label>Go/No-Go Meeting Date</label>
    <type>Date</type>
</CustomField>