unpackaged/main/default/objects/Opportunity/fields/Gong_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Gong_Conversation__c</fullName>
    <description>Auto computed field that is used in reports for aggregations. DLRS of Conversation object.</description>
    <label># Gong Conversation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>