unpackaged/main/default/objects/Opportunity/fields/Google_Doc_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Google_Doc_Link_1__c</fullName>
    <description>The link to the qualifier doc. 11/29/2021 Renamed From Qualifier Doc to "Customer Notes doc"</description>
    <inlineHelpText>Please include your qualifier gdoc link here. Template is https://docs.google.com/document/d/1PTFWshGDdXHJ3EOPJEE7eILdYh4KNpg-uT66e3EzKM0/edit?usp=sharing</inlineHelpText>
    <label>Customer Notes doc</label>
    <type>Url</type>
</CustomField>