unpackaged/main/default/objects/Opportunity/fields/Identified_Pain_Score__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain_Score__c</fullName>
    <description>What is driving the prospect to change?  How acute is the pain?</description>
    <inlineHelpText>--A score of 0 means we don’t know what the pain is. 
--A score of 1 means the rep has uncovered some pain, but can’t yet quantify it. 
--A score of 2 means the rep has identified the pain and quantified it so the customer agrees that ‘staying with OSS or doing nothing’ is no longer an option.</inlineHelpText>
    <label>Identified Pain Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>