unpackaged/main/default/objects/Opportunity/fields/Incentive_Compensation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Compensation_Notes__c</fullName>
    <description>This is a field utilized by the finance team for compensation information.</description>
    <inlineHelpText>This is a field utilized by the finance team for compensation information.</inlineHelpText>
    <label>Incentive Compensation Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>