unpackaged/main/default/objects/Opportunity/fields/Indirect_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Refresh__c</fullName>
    <label>Indirect Refresh</label>
    <type>Date</type>
</CustomField>