unpackaged/main/default/objects/Opportunity/fields/Last_Activity_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Age__c</fullName>
    <description># of business days between Last Activity and today</description>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( LastActivityDate   - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(LastActivityDate  - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this field counts the number of business days between last activity and today</inlineHelpText>
    <label>Last Activity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>