unpackaged/main/default/objects/Opportunity/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>The date the last activity was created</description>
    <inlineHelpText>The date the last activity was created</inlineHelpText>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>