unpackaged/main/default/objects/Opportunity/fields/Last_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_ID__c</fullName>
    <description>Posts the last activity ID to this field when it is a call or meeting and associated to an opportunity</description>
    <inlineHelpText>Posts the last activity ID to this field when it is a call or meeting and associated to an opportunity</inlineHelpText>
    <label>Last Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>