unpackaged/main/default/objects/Opportunity/fields/Lead_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lead_Amount__c</fullName>
    <description>This is the amount value that pulls from when an opportunity is created from a lead and the SDR estimated amount they think the opportunity is worth. Is used in a workflow rule to push into the Opportunity Amount field.</description>
    <inlineHelpText>This is the amount value that pulls from when an opportunity is created from a lead and the SDR estimated amount they think the opportunity is worth. Is used in a workflow rule to push into the Opportunity Amount field.</inlineHelpText>
    <label>Lead Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>