unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Staying with Open Source</fullName>
            </value>
            <value>
                <fullName>Pain&lt;&gt;Price Mismatch</fullName>
            </value>
            <value>
                <fullName>Timing is not there</fullName>
            </value>
            <value>
                <fullName>Unresponsive: Went dark</fullName>
            </value>
            <value>
                <fullName>Moved to/Stayed with Self Serve</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Missing features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Stale - Ops Cleanup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>