unpackaged/main/default/objects/Opportunity/fields/Loss_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Sub_Reason__c</fullName>
    <label>Loss Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New to Self Serve</fullName>
            </value>
            <value>
                <fullName>Existing Self Serve</fullName>
            </value>
            <value>
                <fullName>Lost funding</fullName>
            </value>
            <value>
                <fullName>Price too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>