unpackaged/main/default/objects/Opportunity/fields/Management_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Management_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Our favorite deals in Best Case.</inlineHelpText>
    <label>Management Forecast</label>
    <type>Checkbox</type>
</CustomField>