unpackaged/main/default/objects/Opportunity/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <description>This field is intended for Managers to use during their Weekly Forecast Updates.</description>
    <inlineHelpText>This field is intended for Managers to use during their Weekly Forecast Updates.</inlineHelpText>
    <label>Manager Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>