unpackaged/main/default/objects/Opportunity/fields/Manual_Revenue_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Revenue_Adjustment__c</fullName>
    <label>Manual Revenue Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>