unpackaged/main/default/objects/Opportunity/fields/MEDDPICC_Total__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Total__c</fullName>
    <description>Calculated by taking the sum of each MEDPICC Score field and giving it a total. Economic Buyer, Champion and Identified Pain are worth 1.65 points, opposed to the others only being worth 1 point.</description>
    <formula>(VALUE(TEXT( Champion_Score__c ))*1.65) + VALUE(TEXT( Competition_Score__c )) + VALUE(TEXT( Decision_Criteria_Score__c )) + VALUE(TEXT( Decision_Process_Score__c )) + (VALUE(TEXT( Economic_Buyer_Score__c ))*1.65) + (VALUE(TEXT( Identified_Pain_Score__c ))*1.65) + VALUE(TEXT( Metrics_Score__c )) + VALUE(TEXT( Paper_Process_Score__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by taking the sum of each MEDPICC Score field and giving it a total. Economic Buyer, Champion and Identified Pain are worth 1.65 points, opposed to the others only being worth 1 point.</inlineHelpText>
    <label>MEDDPICC Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>