unpackaged/main/default/objects/Opportunity/fields/MEDDPICC_Total_FHT__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Total_FHT__c</fullName>
    <label>MEDDPICC Total (FHT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>