unpackaged/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>What is the economic impact of the solution? i.e. Cost Reduction, Risk Avoidance Increased  Revenue/Market Share in dollars.</description>
    <inlineHelpText>What is the economic impact of the solution? i.e. Cost Reduction, Risk Avoidance Increased  Revenue/Market Share in dollars.</inlineHelpText>
    <label>Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>