unpackaged/main/default/objects/Opportunity/fields/Metrics_Score__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Score__c</fullName>
    <description>This step is all about how we quantifies success for the customer. Is it a reduction in MTTR?  Or a reduction in tickets? Or less downtime?</description>
    <inlineHelpText>A score of 0 means we don't have any metrics.  A score of 1 means that we know there is a project around this, but we don't know what the metrics are they are using to define success.  A score of 2 means  we know how the #'s they are using to define success.</inlineHelpText>
    <label>Metrics Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>