unpackaged/main/default/objects/Opportunity/fields/Most_Recent_Contact_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contact_Request__c</fullName>
    <description>This field represents an Opportunity's Account's Most Recent Contact Request at - the time the Opportunity was created - and is used to determine 'Warmbound' business logic.</description>
    <inlineHelpText>This field represents an Opportunity's Account's Most Recent Contact Request at - the time the Opportunity was created - and is used to determine 'Warmbound' business logic.</inlineHelpText>
    <label>Last Contact Request before Opp</label>
    <type>DateTime</type>
</CustomField>