unpackaged/main/default/objects/Opportunity/fields/NACVServicesTemp__c.field-meta.xml
<CustomField>
    <fullName>NACVServicesTemp__c</fullName>
    <description>Temporary field for the cpq cut over for NACV calculations. This is only for Q3 2021.</description>
    <formula>NACVTemp__c +  Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Temporary field for the cpq cut over for NACV calculations. This is only for Q3 2021.</inlineHelpText>
    <label>NACV + Services (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>