unpackaged/main/default/objects/Opportunity/fields/NACVTemp__c.field-meta.xml
<CustomField>
    <fullName>NACVTemp__c</fullName>
    <description>Temporary field for the cpq cut over for NACV calculations. This is only for Q3 2021.</description>
    <inlineHelpText>Temporary field for the cpq cut over for NACV calculations. This is only for Q3 2021.</inlineHelpText>
    <label>NACV (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>