unpackaged/main/default/objects/Opportunity/fields/Net_ACV__c.field-meta.xml
<CustomField>
    <fullName>Net_ACV__c</fullName>
    <description>Sum of ACV Rollup and manual Adjustment to ACV</description>
    <formula>ACV_Rollup__c + Adjustment_to_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of ACV Rollup and manual Adjustment to ACV</inlineHelpText>
    <label>Net ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>