unpackaged/main/default/objects/Opportunity/fields/Net_ACV_Services__c.field-meta.xml
<CustomField>
    <fullName>Net_ACV_Services__c</fullName>
    <description>Sum of net adjusted ACV and Services</description>
    <formula>Net_ACV__c + Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of net adjusted ACV and Services</inlineHelpText>
    <label>Net ACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>