unpackaged/main/default/objects/Opportunity/fields/Net_NACV__c.field-meta.xml
<CustomField>
    <fullName>Net_NACV__c</fullName>
    <description>Sum of Net ACV less Adjusted RACV and Adjustment to NACV</description>
    <formula>IF(
Adjusted_RACV__c &gt; Net_ACV__c, 0, Net_ACV__c - Adjusted_RACV__c + Adjustment_to_NACV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Net ACV less Adjusted RACV and Adjustment to NACV</inlineHelpText>
    <label>Net NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>