unpackaged/main/default/objects/Opportunity/fields/Net_NACV_Services__c.field-meta.xml
<CustomField>
    <fullName>Net_NACV_Services__c</fullName>
    <description>Sum of net adjusted NACV  and Services</description>
    <formula>Net_NACV__c + Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of net adjusted NACV  and Services</inlineHelpText>
    <label>Net NACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>