unpackaged/main/default/objects/Opportunity/fields/Net_RACV__c.field-meta.xml
<CustomField>
    <fullName>Net_RACV__c</fullName>
    <description>The lesser of ACV or Net Baseline for the current deal</description>
    <formula>IF(Net_ACV__c &lt; Adjusted_RACV__c, Net_ACV__c, Adjusted_RACV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lesser of ACV or Net Baseline for the current deal</inlineHelpText>
    <label>Net RACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>