unpackaged/main/default/objects/Opportunity/fields/New_FY23_Sales_Stages__c.field-meta.xml
<CustomField>
    <fullName>New_FY23_Sales_Stages__c</fullName>
    <inlineHelpText>Please use this field to select the desired stage under the new Sales Process. We've prefilled values based on the existing stage -- all values entered here be rolled into the Stage field.</inlineHelpText>
    <label>New FY23 Sales Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualifying Opportunity</fullName>
            </value>
            <value>
                <fullName>Technical Validation</fullName>
            </value>
            <value>
                <fullName>Champion Alignment</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Booking Review</fullName>
            </value>
            <value>
                <fullName>Deal Won</fullName>
            </value>
            <value>
                <fullName>Deal Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>