unpackaged/main/default/objects/Opportunity/fields/New_Logo_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Logo_Amount__c</fullName>
    <description>This field is for the new logo bonus and combines Services and ACV for new business opps</description>
    <formula>IF (ISPICKVAL(Type, "New Business"),

( AnnualContractValueACV__c  +  Services__c ),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Logo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>