unpackaged/main/default/objects/Opportunity/fields/Next_Steps_Last_Edited_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Last_Edited_Date__c</fullName>
    <label>Next Steps Last Edited Date</label>
    <type>Date</type>
</CustomField>