unpackaged/main/default/objects/Opportunity/fields/NextSteps__c.field-meta.xml
<CustomField>
    <fullName>NextSteps__c</fullName>
    <description>This is a custom next steps field that is rich text enabled (RTE) for reps to put in their next steps</description>
    <inlineHelpText>This is a custom next steps field that is rich text enabled (RTE) for reps to put in their next steps</inlineHelpText>
    <label>Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>