unpackaged/main/default/objects/Opportunity/fields/Number_Synced_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_Synced_Quotes__c</fullName>
    <label># Synced Quotes?</label>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>