unpackaged/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Generates the number for the opportunity record when it is created</description>
    <displayFormat>O-{0000000}</displayFormat>
    <inlineHelpText>Generates the number for the opportunity record when it is created</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>