unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Email</label>
    <type>Text</type>
</CustomField>