unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>