unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <formula>Owner.FirstName&amp;" "&amp;Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>