unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <formula>Owner.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Role</label>
    <type>Text</type>
</CustomField>