unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Territory__c</fullName>
    <formula>Owner.Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Territory</label>
    <type>Text</type>
</CustomField>