unpackaged/main/default/objects/Opportunity/fields/Opportunity_Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Prediction_Score__c</fullName>
    <label>Opportunity Prediction Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>